Initial commit: Estructura base

--- a/web/index.html
+++ b/web/index.html
@@ -1,17 +1,77 @@
 <!doctype html>
-<html>
-<head><meta charset="utf-8"><title>Servidor Grupo 1</title></head>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Servidor Grupo 1</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            max-width: 900px;
+            margin: 40px auto;
+            padding: 20px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        }
+        .container {
+            background-color: white;
+            padding: 40px;
+            border-radius: 15px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.3);
+        }
+        h1 {
+            color: #2c3e50;
+            border-bottom: 4px solid #667eea;
+            padding-bottom: 15px;
+            font-size: 2.5em;
+        }
+        h2 {
+            color: #34495e;
+            margin-top: 30px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            background: linear-gradient(90deg, #f093fb 0%, #f5576c 100%);
+            color: white;
+            margin: 10px 0;
+            padding: 15px;
+            border-radius: 8px;
+            font-weight: bold;
+        }
+        .info {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 30px;
+        }
+        .info p {
+            margin: 10px 0;
+            font-size: 1.1em;
+        }
+    </style>
+</head>
 <body>
-  <h1>Servidor Grupo 1</h1>
-  <h2>Integrantes:</h2>
-  <ul>
-    <li>Mario Montoya</li>
-    <li>Emerson Alvarez</li>
-    <li>Salvador Vasquez</li>
-    <li>Kevin Lemus</li>
-    <li></li>
-  </ul>
-  <p>Hostname: servidor-grupo1</p>
-  <p>Fecha: Wed Nov  5 10:07:43 PM CST 2025</p>
+    <div class="container">
+        <h1>🖥️ Servidor Grupo 1</h1>
+        
+        <h2>👥 Integrantes del Equipo:</h2>
+        <ul>
+            <li>Mario Montoya</li>
+            <li>Emerson Alvarez</li>
+            <li>Salvador Vasquez</li>
+            <li>Kevin Lemus</li>
+        </ul>
+        
+        <div class="info">
+            <h2 style="color: white;">📊 Información del Servidor</h2>
+            <p><strong>Hostname:</strong> servidor-grupo1</p>
+            <p><strong>Fecha:</strong> 2025-11-06 20:59:57</p>
+            <p><strong>Curso:</strong> Introducción al Software Libre</p>
+            <p><strong>Universidad:</strong> Universidad de El Salvador</p>
+        </div>
+    </div>
 </body>
 </html>
